# MyHealthGuru

./: .backup.modules  .clang-format  .clang-tid  .gdbinit  .gitignore  .gitmodules  AppSpecific.cmake  BaseDirs.cmake  CLAUDE.md  CMakeLists.txt  LICENSE  Linux.modules  Makefile  README.md  Win32.modules  depax.sh  macOS.modules  noop  noop-deploy.sh  statement.cpp
include/MyHealthGuru/: App.h  GlobalIDs.h  MyHealthGuru.h  Sizes.h  resource.h
resources/configs/form-layouts/: AddressGroup.yaml  AddressPage.yaml  AddressSelectorGroup.yaml  ContactGroup.yaml  FilenameGroup.yaml  FilenamePage.yaml  FirstRunPage.yaml  NameGroup.yaml  NamePage.yaml  UserGroup.yaml
resources/configs/generator-source/rs/: Verbatim Placement Demo.no-yaml  addresses_table.yaml  email_authority_table.yaml  email_ports_table.yaml  email_security_table.yaml  phone_numbers_table.yaml  phone_types_table.yaml  settings_table.yaml  states_table.yaml  test_status_table.yaml  titles_table.yaml  years_table.yaml
resources/configs/generator-source/ui/: Admissions.yaml  AppearanceSettings.yaml  Appointments.yaml  BriefUserGroup.yaml  Doctors.yaml  EmailAlertsGroup.yaml  FilenameGroup.yaml  GeneralSettingsPage.yaml  Illnesses.yaml  Items.yaml  ListsSettings.yaml  Locations.yaml  NewDatafileWizardPage.yaml  PopupAlertsGroup.yaml  Scripts.yaml  ScriptsSettings.yaml  Settings.yaml  SmsAlertsGroup.yaml  Statistics.yaml  Users.yaml  Vaccinations.yaml  YearsSettings.yaml
resources/html/: About.html  FileHandlerAsk.html  FileHandlerAskNoMRU.html  FileHandlerFileMissing.html  FileHandlerFileMissingNoMRU.html  FileHandlerMRUMissing.html  gtk-wx.css
src/: BaseDirs.cmake  CMakeLists.txt  dummy.cpp
src/app/: App.cpp  CMakeLists.txt  CategoryPages.cpp  DBManager.cpp  DBManager.ixx  DBManager2.cpp  Document.cpp  Document.ixx  Document2.cpp  Frame.cpp  Frame.ixx  SettingsPages.cpp  View.ixx
src/ctrls/: CMakeLists.txt  EmailAuthorityChoice.ixx  EmailAuthorityCombo.ixx  EmailSecurityChoice.ixx  EmailSecurityCombo.ixx  TitlesChoice.ixx
src/db/: CMakeLists.txt  DBase.cpp  DBase.ixx  InitializeSchema.cpp
src/interface/: CMakeLists.txt  Group.cpp  Interface.cpp
src/interface/groups/: UserGroup.ixx
src/interface/wizard/pages/: AddressPage.ixx  FilenamePage.ixx  NamePage.ixx  PersonPage.ixx  WelcomePage.ixx
src/interface/wizard/wizards/: NewFileWizard.ixx
